arreglo inicio sesion

--- a/PROYECTO SEMESTRAL/Login.html
+++ b/PROYECTO SEMESTRAL/Login.html
@@ -22,10 +22,10 @@
 
    
 </head>
-<body class="fondoPP , cu">
-  <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body class="fondoPP , cu ">
+  <div><nav class="navbar navbar-expand-lg navbar-light bg-light  ">
     <h3>GameTopia</h3>
-    <a class="navbar-brand" href="Pantalla.html"  style="margin-left: 25px;" >Inicio</a>
+    <a class="navbar-brand , letraN" href="Pantalla.html"  style="margin-left: 25px;" class="letraN" >Inicio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -33,30 +33,30 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link , cuP1" href="./Exclusivo Play/playstation.html">PlayStation <span class="sr-only">(current)</span></a>
+          <a class="nav-link , cuP1 , letraN" href="./Exclusivo Play/playstation.html">PlayStation <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link , cuX1" href="./Exclusivo Xbox/xbox.html">Xbox</a>
+          <a class="nav-link , cuX1 , letraN" href="./Exclusivo Xbox/xbox.html">Xbox</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link  , cuN1" href="./Exclusivo Nintendo/nintendo.html">Nintendo</a>
+            <a class="nav-link  , cuN1 , letraN" href="./Exclusivo Nintendo/nintendo.html">Nintendo</a>
           </li>
         <li class="nav-item active">
-            <a class="nav-link , cuPC1" href="./Exclusivo PC/pc.html">PC</a>
+            <a class="nav-link , cuPC1 , letraN" href="./Exclusivo PC/pc.html">PC</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link , cu1" href="Contacto.html">Contactanos</a>
+            <a class="nav-link , cu1 , letraN" href="Contacto.html">Contactanos</a>
         </li>
         <li class="nav-item dropdown active , cu1">
-          <a class="nav-link dropdown-toggle , cu1"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle , cu1 , letraN"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Perfil
           </a>
-          <div class="dropdown-menu , cu1" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item , cu1" href="Login.html">Iniciar Sesion</a>
-            <a class="dropdown-item , cu1" href="Registrarse.html">Registrarse</a>
-            <a class="dropdown-item , cu1" href="ver perfil.html">Ver perfil</a>
-            <a class="dropdown-item , cu1" href="Modificar.html">Modificar Perfil</a>
-            <a class="dropdown-item , cu1" href="administrador.html">Perfil Administrador</a>
+          <div class="dropdown-menu , cu1 , letraN" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item , cu1 , letraN" href="Login.html">Iniciar Sesion</a>
+            <a class="dropdown-item , cu1 , letraN" href="Registrarse.html">Registrarse</a>
+            <a class="dropdown-item , cu1 , letraN" href="ver perfil.html">Ver perfil</a>
+            <a class="dropdown-item , cu1 , letraN" href="Modificar.html">Modificar Perfil</a>
+            <a class="dropdown-item , cu1 , letraN" href="administrador.html">Perfil Administrador</a>
           </div>
         </li>
         
@@ -89,7 +89,7 @@
                       </div>
                       <div class="form-check , cu1">
                         <input type="checkbox" class="form-check-input , cu1" id="exampleCheck1">
-                        <label class="form-check-label , letraLo , cu1, sesion" for="exampleCheck1"><h6>Mantener sesion iniciada</h6></label>
+                        <label class="form-check-label  , cu1, sesion" for="exampleCheck1"><h6>Mantener sesion iniciada</h6></label>
                     </div><br>
                     <a class="cu1 , centrar" href="olvidado.html"><p >¿Olvidaste tu contraseña?</p></a><br>
                       <button class="buttonlogin" type="submit">Entrar</button>
