--- a/PROYECTO SEMESTRAL/AgregarJuego.html
+++ b/PROYECTO SEMESTRAL/AgregarJuego.html
@@ -72,9 +72,9 @@
 
                
 
-                <form action="#" method="POST" id="formlogin">
+                <form action="#" method="POST" id="formlogin" class="fondoform">
                   <div class="form">
-                      <h1 class="centrar">Agrega un juego </h1>
+                      <h1 class="centrar letraLo">Agrega un juego </h1>
                       
                       <div class="grupo">
                           <input type="text" name="" id="NombreJ"><span class="barra" required ></span>
