--- a/PROYECTO SEMESTRAL/Registrarse.html
+++ b/PROYECTO SEMESTRAL/Registrarse.html
@@ -66,8 +66,10 @@
     <div class="container" class="fondo">
         <div class="row" style="margin-top: 50px;">
             <div class="col-md-12 col-sm-12">
-                <h1 class="titulodestacado" >Regístrate</h1><br>
+                
                   <form action="#" method="POST" id="formregister" class="fondoform" enctype="multipart/form-data">
+                    
+                    <h1 class="centrar letraLo" >Regístrate</h1><br>
                     <div class="form">
                     <div class="form-group" ><label class="form-label , letraLo , cu"><h4>Nombre:</h4> </label>
                     <input class="form-control , letraLo , cu1" type="text" name="" id="nombre" value="" ></div>
@@ -88,9 +90,6 @@
 
                     <div class="form-gruop" ><label class="form-label , letraLo , cu" ><h4>Telefono movil:</h4> </label>
                         <input  class="form-control , letraLo , cu1" type="text" name="" id="telefono" value="" ></div><br>
-
-                    <div class="form-group"><label class="form-label , letraLo , cu" ><h4>Fecha de Nacimiento:</h4> </label><br>
-                    <input class="cu1" type="date" name="" id="f_nac" value="2007-12-15"></div><br>
 
                     <div class="form-group"><label class="form-label , letraLo , cu"><h4>Edad:</h4> </label><br>
                     <input class="cu1" type="number" name="" id="edad" ></div><br>
