--- a/PROYECTO SEMESTRAL/olvidado.html
+++ b/PROYECTO SEMESTRAL/olvidado.html
@@ -64,8 +64,9 @@
         <div class="row">
             <div class="col-md-3 col-sm-3"></div>
             <div class="col-md-6 col-sm-6" style="margin-top: 80px;">
-                <h1 class="centrar , letraLo , cu">Olvidaste tu contraseña</h1><br><br>
-                <form action="#" method="POST" name="" id="formlogin" enctype="multipart/form-data">
+                
+                <form action="#" method="POST" name="" id="formlogin"  class="fondoform" enctype="multipart/form-data">
+                  <h1 class="centrar , letraLo  , cu">¿Olvidaste tu contraseña?</h1><br><br>
                     <div class="form-group"  >
                         <h4><label class="form-label , letraLo , cu">Escribe tu correo o telefono movil: </label></h4>
                         <input required class="form-control , letraLo , cu1" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com o 9123456789">
