borre todos los requeridos del html

--- a/PROYECTO SEMESTRAL/Modificar.html
+++ b/PROYECTO SEMESTRAL/Modificar.html
@@ -71,19 +71,19 @@
                   <h1  class="centrar , letraLo ,cu ">Modificar perfil</h1>
                     <div class="form-group" >
                       <div class="grupo">
-                          <input type="text" name="" id="nombreM"><span class="barra" required ></span>
+                          <input type="text" name="" id="nombreM"><span class="barra"  ></span>
                           <label for=""><h5>Cambiar Nombre</h5></label>
                       </div>
                   </div>
                   <div class="grupo">
-                   <input  type="file" class="form-control-file , letraLo , cu1" id="exampleFormControlFile1"><span class="barra" required ></span>
+                   <input  type="file" class="form-control-file , letraLo , cu1" id="exampleFormControlFile1"><span class="barra" ></span>
                     <label for=""><h5>Cambiar foto de perfil</h5></label>
                 </div>
                     
                     <h4 class="letraLo , cu">Cambiar contraseña:</h4>
 
                     <div class="grupo">
-                      <input type="password" name="" id="passwordM"><span class="barra" required ></span>
+                      <input type="password" name="" id="passwordM"><span class="barra" ></span>
                       <label for=""><h5>Contraseña Nueva</h5></label>
                   </div>
                   <div class="grupo">
