--- a/PROYECTO SEMESTRAL/olvidado.html
+++ b/PROYECTO SEMESTRAL/olvidado.html
@@ -70,7 +70,7 @@
                     <h1 class="centrar letraLo">¿Olvidaste tu contraseña?</h1>
                     
                     <div class="grupo">
-                        <input type="text" name="" id="codigoE"><span class="barra" required ></span>
+                        <input type="text" name="" id="codigoE"><span class="barra"  ></span>
                         <label for=""><h5>Escriba su correo para recibir el código.</h5></label>
                     </div>
                     <input type="submit" value="Enviar" class="btn btn letraLo" style="text-align: center; color: rgb(255, 255, 255); background-color: rgb(97, 97, 97); margin-left: auto;">
