--- a/PROYECTO SEMESTRAL/AgregarJuego.html
+++ b/PROYECTO SEMESTRAL/AgregarJuego.html
@@ -64,17 +64,17 @@
       </nav></div>
 
     <div class="container" class="fondo">
-      <div class="container-fluid" class="fondo"><br><br><br>
-        <div class="row">
-            <div class="col-md-3 col-sm-3"></div>
-            <div class="col-md-6 col-sm-6" style="margin-top: 20px;">
-              <form action="#" method="POST" id="formlogin" class="fondoform">
-                <div class="form">
-                  <h1 class="centrar letraLo">Agrega un juego </h1>
-                    <div class="grupo">
-                      <input type="text" name="" id="NombreJ"><span class="barra" ></span>
-                      <label for="">Nombre del juego</label>
-                    </div>
+      <div class="row">
+        <div class="col-md-3 col-sm-3"></div>
+        <div class="col-md-6 col-sm-6" style="margin-top: 20px;">
+          <form action="#" method="POST" id="formJuego" class="fondoform">
+            <div class="form">
+              <h1 class="centrar letraLo">Agrega un juego </h1>
+            </div>
+              <div class="grupo">
+                <input type="text" name="" id="NombreJ"><span class="barra" ></span>
+                <label for="">Nombre del juego</label>
+              </div>
                     <div class="grupo">
                       <input type="text" name="" id="DescripcionJ"><span class="barra" ></span>
                       <label for="">Descripcion</label>
@@ -93,14 +93,20 @@
                     </div>
                     <div class="form-check , cu1">
                       <input type="submit" value="Enviar" class="btn btn letraLo" style="text-align: center; color: rgb(255, 255, 255); background-color: rgb(97, 97, 97); margin-right: auto;">
-                      <p class="warnings" id="mensaje"></p>
+                      <p class="warnings" id="mensaje_agregar"></p>
+                    </div>
               </form>
               </div>
               <div class="col-md-3 col-sm-3"></div>
+        </div>
+        <br><br>
 
-                      
 
-        
+
+
+
+
+
     </div>    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
@@ -111,7 +117,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" 
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
         crossorigin="anonymous"></script>
-    <script src="JS/jquery.js"></script>
+    <script src="Validaciones/agregar.js"></script>
 </body>   
 </body>
 </html>
