--- a/PROYECTO SEMESTRAL/Modificar.html
+++ b/PROYECTO SEMESTRAL/Modificar.html
@@ -91,7 +91,7 @@
                           <label for=""><h5>Confirmar Contraseña</h5></label>
                       </div>
 
-                    <h5 class="centrar , letraLo , cu">Para cambiar tu email tendras que escribirlo y con el enlace que te llegue podras cambiar a tu nuevo email. ¿Estas seguro de cambiarlo?</h5>
+                    <h5 class="centrar , letraLo , cu">Para cambiar tu email tendrás que escribirlo y con el enlace que te llegue podrás cambiar a tu nuevo email. ¿Estás seguro de cambiarlo?</h5>
                     <div class="form-gruop" >
                       
                       <div class="grupo">
