--- a/PROYECTO SEMESTRAL/Registrarse.html
+++ b/PROYECTO SEMESTRAL/Registrarse.html
@@ -97,7 +97,7 @@
 
                 <div class="grupo">
                   <input type="text" name="" id="telefono"><span class="barra" ></span>
-                  <label for=""><h5>Telefono movil</h5></label>
+                  <label for=""><h5>Teléfono móvil</h5></label>
                 </div>
 
                 <div class="grupo">
