--- a/PROYECTO SEMESTRAL/AgregarJuego.html
+++ b/PROYECTO SEMESTRAL/AgregarJuego.html
@@ -77,7 +77,7 @@
               </div>
                     <div class="grupo">
                       <input type="text" name="" id="DescripcionJ"><span class="barra" ></span>
-                      <label for="">Descripcion</label>
+                      <label for="">Descripción</label>
                     </div>
                     <div class="grupo">
                       <input type="text" name="" id="PlataformaJ"><span class="barra" ></span>
@@ -90,14 +90,17 @@
                     <div class="grupo">
                       <label for="exampleFormControlFile1">Seleccione foto de perfil</label>
                       <input type="file" class="barra" id="SeleccioneJ">
-                    </div>
-                    <div class="form-check , cu1">
-                      <input type="submit" value="Enviar" class="btn btn letraLo" style="text-align: center; color: rgb(255, 255, 255); background-color: rgb(97, 97, 97); margin-right: auto;">
-                      <p class="warnings" id="mensaje_agregar"></p>
-                    </div>
+                    </div>  
+        <div class="col-md-3 col-sm-3"></div>
+              <div class="row">
+                <div class="col-md-6">
+                  <input type="submit" value="Enviar" class="btn btn letraLo" style="text-align: center; color: rgb(255, 255, 255); background-color: rgb(97, 97, 97); margin-right: auto;">
+                </div>
+                <div class="col-md-6"><input type="reset" value="Limpiar" class="btn btn letraLo" style="text-align: center; color: rgb(255, 255, 255); background-color: rgb(97, 97, 97); margin-left: auto;">
+                </div></div>
+                <p class="warnings" id="mensaje_agregar"></p>
               </form>
-              </div>
-              <div class="col-md-3 col-sm-3"></div>
+              </div>    
         </div>
         <br><br>
 
