--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/ARMS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/ARMS.html
@@ -92,11 +92,12 @@
         </div>
         <br><br><br><div class="row">
           <div class="col-md-3 col-sm-12"></div>
-          <div class="col-md-9 col-sm-12"><form action="/action_page.php">
+          <div class="col-md-9 col-sm-12">
+            <form action="/action_page.php">
             <h4 class="letraVJ">Comentario</h4>
-              <textarea class="cu1" name="message" rows="5" cols="65"></textarea>
+              <textarea class="cu1" name="message" rows="5" cols="65" ></textarea>
               
-              <br><br><input type="submit" value="Enviar" class="btn btn-danger , cu1"  >
+              <br><br><input type="submit" value="Enviar" class="btn btn , cu1"  >
             </form><br><br><br><br>
           </div>
       </div>
