Listo nintendo videojuegos

--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/ANIMAL CROSSING.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/ANIMAL CROSSING.html
@@ -75,7 +75,7 @@
                 <th class="centrar , letraVJ"><h5>Animal Crossing es un videojuego de simulación social y de vida que Nintendo ha descrito como un «juego de comunicación».
                   El personaje vive una vida en la que el usuario decide qué hacer, como cumplir las tareas propuestas por los vecinos (que no son obligatorias). 
                   Los jugadores asumen el rol de un nuevo vecino que se acaba de mudar al pueblo. El género y la cara del personaje depende de las respuestas que 
-                  se le den a las preguntas de un gato llamado Fran, el cual nos encontramos en el tren en el que el personaje viaja al pueblo.</h5</th>
+                  se le den a las preguntas de un gato llamado Fran, el cual nos encontramos en el tren en el que el personaje viaja al pueblo.</h5></th>
               </tr>
           </table> 
             </div></div>
