Avance videojuegos PC

--- a/PROYECTO SEMESTRAL/Exclusivo PC/PALADINS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/PALADINS.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJPC">
+<body class="fondoPP">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -66,7 +66,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PC/paladins.jpg" alt="sin imagen"><h2 class="letraVJ">PALADINS</h2>
+            <img class="img" src="../img/PC/paladins.jpg" alt="sin imagen"><h2 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%;">PALADINS</h2>
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar letraVJ">Descripcion</h2><br>
