--- a/PROYECTO SEMESTRAL/Exclusivo Play/GHOST OF TSUSHIMA.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/GHOST OF TSUSHIMA.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJP";>
+<body class="fondoPP";>
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
